--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Netflix</title>
-    <link rel="stylesheet" href="style.css"/>
-     <script src="scrpt.js"></script>
+    <link rel="stylesheet" href="NETFLIX CLONE/style.css"/>
+     <script src="NETFLIX CLONE/scrpt.js"></script>
   </head>
   <body>
     <!-- navbar -->
     <div class="nav">
       <div class="nav__left">
         <a href="index.html">
-        <img class="nav_logo" src="logo.png" alt=""></a>
+        <img class="nav_logo" src="NETFLIX CLONE/logo.png" alt=""></a>
       </div>
       <div class="nav__right">
-        <img src="avatar.png" class="nav_avatar" alt="">
+        <img src="NETFLIX CLONE/avatar.png" class="nav_avatar" alt="">
       </div>
     </div>
 
